--- a/Webfile/Homepage.html
+++ b/Webfile/Homepage.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="Webfile.css">
 </head>
 <body>
-    <div class="Topcontainer">
+
+    <header class="Topcontainer">
         <div class="Top">
             
         </div>
-    </div>
+    </header>
 </body>
