--- a/Webfile/Homepage.html
+++ b/Webfile/Homepage.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAIF Entertainment</title>
-    <link rel="icon" href="" type="image/png">
+    <link rel="icon" href="Jaif logo.png" type="image/png">
     <link rel="stylesheet" href="Webfile.css">
 </head>
 <body>
 
-    <header class="Topcontainer">
-        
-
+    <div class="Topcontainer">
+        <a href="Homepage.html">
+        <header class="logocontainer">
         <div class="CorpLogo">
-        <img src="" alt="Jaif logo" class="logo">
-        <span class="logo_text"><b>Jaif</b></span> 
+        <img src="Jaif white.png" alt="Jaif logo" class="logo">
+        <span class="logo_text"><b>JAIF Entertainment</b></span> 
+        </div>
+        </header>
+        </a>
 
-        
-    </header>
+        <nav class="Topnav">
+            <a href="">News</a>
+            <a href="Contact.html">Contact</a>
+        </nav>
+
+
+
+    </div>
 </body>
