--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAIF Entertainment</title>
+    <title>Contact</title>
     <link rel="icon" href="Jaif logo.png" type="image/png">
     <link rel="stylesheet" href="Webfile.css">
 </head>
@@ -27,5 +27,11 @@
 
 
 
+    </div>
+
+
+    <div class="Contactcontainer">
+        <h1>Contact</h1>
+        
     </div>
 </body>
