--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -32,6 +32,7 @@
 
     <div class="Contactcontainer">
         <h1>Contact</h1>
-        
+        <p>Email:</p>
+        <p>Phone Number:</p>
     </div>
 </body>
