--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -32,8 +32,12 @@
 
     <div class="Contactcontainer">
         <h1>Contact</h1>
+        <h3>Address:</h3>
+        <p>LBS Lund</p>
+        <p>Bredgatan 10, 222 21 Lund</p>
+        <h3>Contact us</h3>
         <p>Email:</p>
         <p>Phone Number:</p>
     </div>
-    
+
 </body>
