--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -36,8 +36,8 @@
         <p>LBS Lund</p>
         <p>Bredgatan 10, 222 21 Lund</p>
         <h3>Contact us</h3>
-        <p>Email:</p>
-        <p>Phone Number:</p>
+        <p>Email: natimothytg@gmail.com</p>
+        <p>Phone Number: +46 79 359 1234</p>
     </div>
 
 </body>
