--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,13 +32,21 @@
 
 
     <div class="Contactcontainer">
+
+<div class="Contactpicture">
+        <img src="Parry map.png" class="contactbackground">
+    </div>
+
+        <div class="ContactInfo">
         <h1>Contact</h1>
         <h3>Address:</h3>
         <p>LBS Lund</p>
         <p>Bredgatan 10, 222 21 Lund</p>
+        
         <h3>Contact us</h3>
         <p>Email: natimothytg@gmail.com</p>
         <p>Phone Number: +46 79 359 1234</p>
     </div>
-
+</div>
+    
 </body>
