--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -24,6 +24,7 @@
         <nav class="Topnav">
             <a href="">News</a>
             <a href="Contact.html">Contact</a>
+            <a href="Game.html">Games</a>
         </nav>
 
 
@@ -32,21 +33,20 @@
 
 
     <div class="Contactcontainer">
-
-<div class="Contactpicture">
-        <img src="Parry map.png" class="contactbackground">
-    </div>
-
-        <div class="ContactInfo">
+    <div class="ContactInfotop">
         <h1>Contact</h1>
         <h3>Address:</h3>
         <p>LBS Lund</p>
         <p>Bredgatan 10, 222 21 Lund</p>
-        
+        </div>
+        <div class="ContactInfobottom">
         <h3>Contact us</h3>
         <p>Email: natimothytg@gmail.com</p>
         <p>Phone Number: +46 79 359 1234</p>
+
     </div>
 </div>
-    
+    <div class="Contactpicture">
+        <img src="Parry map.png" class="contactbackground">
+    </div>
 </body>
