--- a/Webfile/Homepage.html
+++ b/Webfile/Homepage.html
@@ -20,7 +20,7 @@
         </a>
 
         <nav class="Topnav">
-            <a href="">News</a>
+            <a href="News.html">News</a>
             <a href="Contact.html">Contact</a>
             <a href="Game.html">Games</a>
         </nav>
