--- a/Webfile/Contact.html
+++ b/Webfile/Contact.html
@@ -22,7 +22,7 @@
         </a>
 
         <nav class="Topnav">
-            <a href="">News</a>
+            <a href="News.html">News</a>
             <a href="Contact.html">Contact</a>
             <a href="Game.html">Games</a>
         </nav>
@@ -39,14 +39,20 @@
         <p>LBS Lund</p>
         <p>Bredgatan 10, 222 21 Lund</p>
         </div>
+
         <div class="ContactInfobottom">
         <h3>Contact us</h3>
         <p>Email: natimothytg@gmail.com</p>
         <p>Phone Number: +46 79 359 1234</p>
+        </div>
 
-    </div>
+       <div class="logoaddon">
+        <img src="Jaif white.png" alt="Jaif logo" class="logoaddon">
+       </div>
 </div>
+
     <div class="Contactpicture">
         <img src="Parry map.png" class="contactbackground">
     </div>
+
 </body>
