--- a/Webfile/News.html
+++ b/Webfile/News.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAIF Entertainment</title>
+    <title>News</title>
     <link rel="icon" href="Jaif logo.png" type="image/png">
     <link rel="stylesheet" href="Webfile.css">
 </head>
@@ -20,7 +20,7 @@
         </a>
 
         <nav class="Topnav">
-            <a href="">News</a>
+            <a href="News.html">News</a>
             <a href="Contact.html">Contact</a>
             <a href="Game.html">Games</a>
         </nav>
@@ -28,4 +28,13 @@
 
 
     </div>
+
+<div class="NewsContainer">
+    <h1>News</h1>
+    <p>We are currently working on our first game, which is set to be released in 2025. Stay tuned for more updates!</p>
+</div>
+
+<div class="Newsbackground">
+    
+</div>
 </body>
