--- a/Webfile/News.html
+++ b/Webfile/News.html
@@ -30,11 +30,13 @@
     </div>
 
 <div class="NewsContainer">
+    <div class="NewsContain">
     <h1>News</h1>
     <p>We are currently working on our first game, which is set to be released in 2025. Stay tuned for more updates!</p>
+    </div>
 </div>
 
 <div class="Newsbackground">
-    
+
 </div>
 </body>
