--- a/Webfile/Gtagame.html
+++ b/Webfile/Gtagame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
+    <title>JAIF Entertainment</title>
     <link rel="icon" href="Jaif logo.png" type="image/png">
     <link rel="stylesheet" href="Webfile.css">
 </head>
@@ -28,19 +28,4 @@
 
 
     </div>
-
-<div class="NewsContainer">
-    <div class="NewsContain">
-    <h1>News</h1>
-    <h3>Stay tuned for update!</h3>
-    <p>-2020.7.12 Brainstorming over 3 bottles</p>
-    <p>-2026.2.1 Beta testing</p>
-    <p>-2026.2.12 First launch</p>
-    </div>
-</div>
-
-<div class="Newsbackground">
-<img src="2d gta.png" class="Ads">
-<h2>Upcoming game expansion: Street and heist(Nokia edition)</h2>
-</div>
 </body>
