--- a/Webfile/Game.html
+++ b/Webfile/Game.html
@@ -51,8 +51,8 @@
 
             <a href="Simongame.html">
             <div class="game">
-                <img src="Game3.png" alt="Game 3" class="game-image">
-                <h2>Untitled horror game</h2>
+                <img src="Horror game.png" alt="Game 3" class="game-image">
+                <h2>Nyctophobia</h2>
                 
             </div>
             </a>
