--- a/Webfile/Gtagame.html
+++ b/Webfile/Gtagame.html
@@ -28,4 +28,9 @@
 
 
     </div>
+
+    <div class="GtaContainer">
+        <h1>Street and heist</h1>
+        <img src="2d gta 2.png" alt="Street and heist screenshot" class="GtaImage">
+        <p>Experience the thrill of urban chaos in "Street and Heist," the ultimate open-world action game by JAIF Entertainment. Dive into a sprawling city where you can take on daring heists, engage in high-speed chases, and explore a vibrant urban landscape filled with opportunities and dangers. Customize your character, upgrade your vehicles, and team up with friends for multiplayer mayhem. Are you ready to rule the streets?</p>
 </body>
