--- a/Webfile/Gtagame.html
+++ b/Webfile/Gtagame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAIF Entertainment</title>
+    <title>Street and heist</title>
     <link rel="icon" href="Jaif logo.png" type="image/png">
     <link rel="stylesheet" href="Webfile.css">
 </head>
@@ -29,8 +29,21 @@
 
     </div>
 
-    <div class="GtaContainer">
+    <div class="GameDescContainer">
         <h1>Street and heist</h1>
         <img src="2d gta 2.png" alt="Street and heist screenshot" class="GtaImage">
-        <p>Experience the thrill of urban chaos in "Street and Heist," the ultimate open-world action game by JAIF Entertainment. Dive into a sprawling city where you can take on daring heists, engage in high-speed chases, and explore a vibrant urban landscape filled with opportunities and dangers. Customize your character, upgrade your vehicles, and team up with friends for multiplayer mayhem. Are you ready to rule the streets?</p>
+        <p>Experience the thrill and the excitement of the greatest, most excellent game there is on the platform of gaming. Delve deep into a world of crime, where you can get chicks and the police after you. You drive in a car, fast enough with the fuel of speeding light, in order to evade the police.</p>
+        <p>"This game is absolutely incredible! The graphics are stunning and the gameplay is so engaging. I've been playing for hours and I'm still not tired of it!" - Stephen Togba-Lorenzo.</p>
+        <p>"I can't get enough of this game! The storyline is so captivating and the characters are so well-developed. I highly recommend it to anyone who loves action-packed games!" - Sarah K.</p>
+        <p>"This game is a masterpiece! The attention to detail is amazing and the gameplay is so smooth. I can't wait to see what other games JAIF Entertainment has in store!" - Michael T.</p>
+        <p>Don't miss out on the action! Get your copy of Street and heist today and experience the thrill of the greatest game on the platform of gaming!</p>
+        <p>CREDITS: </p>
+        <p>Web and logo artist: Timothy Nguyen</p>
+        <p>Founder: Adis B</p>
+        <p>Lead Scripter: Leon J</p>
+        <p>Painter: Kosta B</p>
+        <p>Actor: josef ezzat</p>
+        <p>Romance voice actress: Minna Borgström</p>
+        <p>Candy factory owner: Carl Edvin Milton Åkesson</p>
+    </div>
 </body>
