--- a/Webfile/Homepage.html
+++ b/Webfile/Homepage.html
@@ -29,8 +29,14 @@
 
     </div>
 
+<div class="HomepageContainer">
+    <div class="HomepageContain">
+        <h1>JAIF Entertainment</h1>
+        <h3>By people, for the people</h3>
+        <a href="Game.html">Explore</a>
+    </div>
+</div>
 
 
 
-    
 </body>
