--- a/Webfile/Siggigame.html
+++ b/Webfile/Siggigame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAIF Entertainment</title>
+    <title>Parry versus God</title>
     <link rel="icon" href="Jaif logo.png" type="image/png">
     <link rel="stylesheet" href="Webfile.css">
 </head>
@@ -27,5 +27,20 @@
 
 
 
+    </div>
+
+
+        <div class="GameDescContainer">
+        <h1>Parry versus God</h1>
+        <img src="Parry gameplay.png" alt="Parry versus God gameplay screenshot" class="ParryImage">
+        <p>A soulslike game with the main combat being parrying and counter attacking. A parry god vs a boss</p>
+        <p>Don't miss out on the action! Get your copy of Parry versus God today and experience the thrill of the greatest game on the platform of gaming!</p>
+        <p>No review</p>
+        <p>CREDITS: Missam Syed - Enviorment/Map, Sigge Björk - Boss/Enemies, Zoheb Yousaf - Player and Combat</p> 
+        <p>Web and logo artist: Stephen-Lorenzo Togba</p>
+        <p>Founder: Sigge Björk, Zoheb Yousaf </p>
+        <p>Lead Scripter: Missam Syed, Sigge Björk, Zoheb Yousaf</p>
+        <p>Painter: Melina, Bailey, Walter, Hilding, Hector, Gabriel. </p>
+       
     </div>
 </body>
