--- a/Webfile/Game.html
+++ b/Webfile/Game.html
@@ -49,9 +49,9 @@
             </div>
             </a>
 
-            <a href="Simongame.html">
+            <a href="SImongame.html">
             <div class="game">
-                <img src="Horror game.png" alt="Game 3" class="game-image">
+                <img src="Nycto.png" alt="Game 3" class="game-image">
                 <h2>Nyctophobia</h2>
                 
             </div>
